Fixes remove button on Safari

--- a/frontend/src/components/Events/EventTile.module.css
+++ b/frontend/src/components/Events/EventTile.module.css
@@ -18,6 +18,7 @@
 
 .event-tile--remove {
   position: absolute;
+  text-align: center;
   top: 16px;
   right: 16px;
   z-index: 100;
@@ -25,7 +26,8 @@
   padding: 8px;
   font-size: var(--font-l);
   line-height: 1;
-  width: 32px;
+  width: 36px;
+  height: 36px;
   border: none;
   border-radius: 100%;
   background-color: white;
